# cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/ci/: decrypt_secret.sh
assets/tokens/: ck3.txt.gpg  eu4.txt.gpg  hoi4.txt.gpg  imperator.txt.gpg
src/: cli.rs  config.rs  interpolation.rs  json.rs  log.rs  main.rs  melt.rs  tokens.rs  upload.rs  upload_client.rs  watch.rs
tests/: json.rs  melt.rs  utils.rs
tests/fixtures/: json.txt
