[package]
name = "rakaly"
version = "0.5.7"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
jomini = "0.28.0"
eu4save = { git = "https://github.com/rakaly/eu4save.git" }
imperator-save = { git = "https://github.com/rakaly/imperator-save.git", default-features = false }
ck3save = { git = "https://github.com/rakaly/ck3save.git", default-features = false }
hoi4save = { git = "https://github.com/rakaly/hoi4save.git" }
vic3save = { git = "https://github.com/pdx-tools/pdx-tools"  }
anyhow = "1"
argh = "0.1"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
memmap2 = "0.9.5"
notify = "8.0.0"

[dev-dependencies]
assert_cmd = "2"
attohttpc = "0.28"
native-tls = { version = "0.2", features = ["vendored"] }

[profile.release]
lto = "thin"
strip = true
