[package]
name = "rakaly"
version = "0.8.6"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
jomini = { version = "0.33.1", features = ["envelope"] }
ck3save = { git = "https://github.com/rakaly/ck3save.git", default-features = false }
eu4save = { git = "https://github.com/rakaly/eu4save.git" }
eu5save = { git = "https://github.com/pdx-tools/pdx-tools" }
hoi4save = { git = "https://github.com/rakaly/hoi4save.git" }
imperator-save = { git = "https://github.com/rakaly/imperator-save.git", default-features = false }
vic3save = { git = "https://github.com/pdx-tools/pdx-tools"  }
anyhow = "1"
argh = "0.1"
ctrlc = "3.4"
env_logger = "0.11"
log = "0.4"
memmap2 = "0.9.5"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
attohttpc = "0.29"
native-tls = { version = "0.2", features = ["vendored"] }

[profile.release]
lto = "thin"
strip = true
